syntax = 'proto3';

package com.exactpro.th2.codec.grpc;

option java_multiple_files = true;
option java_package = "com.exactpro.th2.codec.grpc";

service TestService {
  rpc TestMethod (TestRequest) returns (TestReply) {}
}

message TestRequest {
  string stringField = 1;
  map<string, string> mapField = 2;
  repeated string repeatedField = 3;
}

message TestReply {
  string stringField = 1;
}